--- a/15.2.md
+++ b/15.2.md
@@ -31,6 +31,14 @@
  - Проверить работоспособность, удалив одну или несколько ВМ.
 4. (дополнительно)* Создать Application Load Balancer с использованием Instance group и проверкой состояния.
 
+Балансировшик:
+
+<img src = "img/pic1.jpg" width = 100%>
+
+Результат обращения к балансировщику. Веб-сервера айпи адреса имеют локальные:
+
+<img src = "img/pic2.jpg" width = 100%>
+
 Полезные документы:
 
 - [Compute instance group](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/compute_instance_group).
