--- a/15.2.md
+++ b/15.2.md
@@ -33,7 +33,7 @@
 
 Балансировшик:
 
-<img src = "img/pic2.jpg" width = 200%>
+<img src = "https://github.com/WilderWein123/clopro-homeworks-2/blob/main/img/pic2.jpg" width = 200%>
 
 Результат обращения к балансировщику. Веб-сервера айпи адреса имеют локальные:
 
