--- a/15.2.md
+++ b/15.2.md
@@ -39,6 +39,10 @@
 
 <img src = "img/pic1.jpg" width = 100%>
 
+Получившийся код:
+
+https://github.com/WilderWein123/clopro-homeworks-2/tree/main/terraform
+
 Полезные документы:
 
 - [Compute instance group](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/compute_instance_group).
